name:                vaultaire-collector-vaultaire-telemetry
version:             0.1.1.0
synopsis:            Vaultaire collector for Vaultaire telemetry
description:         Vaultaire collector for Vaultaire telemetry
homepage:            https://github.com/anchor/vaultaire-collector-vaultaire-telemetry
license:             BSD3
license-file:        LICENSE
author:              Barney Desmond
maintainer:          engineering@anchor.net.au
copyright:           2015 Anchor Systems
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18

flag network-uri
  description: Get Network.URI from the network-uri package
  default: True

executable vaultaire-collector-vaultaire-telemetry
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       mtl,
                       bifunctors,
                       vaultaire-collector-common,
                       marquise,
                       vaultaire-common,
                       bytestring,
                       text,
                       zeromq4-haskell,
                       optparse-applicative >= 0.11.0,
                       transformers,
                       unordered-containers

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6

  hs-source-dirs:      src
  default-language:    Haskell2010
